# Health-Buddy

./: .gitignore  HealthBuddy_ML_API_Brief.md  LICENSE  README.md  advanced_assessments.sql  clerk_id_migration.sql  final_interaction_migration.sql  heat_buddy_analysis.md  init_schema.sql  master_schema.sql  middleware.ts  ml_feedback.sql  package-lock.json  package.json  pyrightconfig.json  reports_and_messages_migration.sql  supabase_schema.sql  tailwind.config.ts  test-gemini.js  ui_code_reference.txt  upload_req.py
HealthBuddy_Models_v7/: diabetes_lr.pkl  diabetes_weights.json  explain_config.json  heart_disease_nn.pt  heart_disease_shap.pkl  hypertension_lr.pkl  hypertension_scaler.pkl  hypertension_shap.pkl  hypertension_weights.json
app/: error.tsx  globals.css  head.tsx  layout.tsx  loading.tsx  page.tsx
docs/: developer.md  general.md
hooks/: useUser.ts
ml/: README.md  diabetes_scaler.pkl  diabetes_xgb.pkl  generate_pdf.py  heart_disease_hgb.pkl  heart_disease_xgb.pkl  hypertension_features.json  hypertension_hgb.pkl  hypertension_xgb.pkl  ml_bridge.py  output_ideal.json  output_ideal_utf8.json  pyproject.toml  server.py  test_model.py
ml_deployment/: Dockerfile  app_features.json  diabetes_hgb.pkl  diabetes_nn.pt  diabetes_weights.json  explain_config.json  heart_disease_features.json  heart_disease_lr.pkl  heart_disease_nn.pt  heart_disease_scaler.pkl  heart_disease_shap.pkl  heart_disease_weights.json  hypertension_hgb.pkl  hypertension_lr.pkl  hypertension_nn.pt  hypertension_scaler.pkl  hypertension_shap.pkl  hypertension_weights.json  ml_bridge.py  (+1 more)
(+131 files in other folders)
