[project]
name = "health-buddy-ai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "joblib>=1.4.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "reportlab>=4.0.0",
    "scikit-learn>=1.4.0",
    "shap>=0.44.0",
    "torch>=2.2.0",
    "xgboost>=2.0.0",
]
